# genome-downsampler

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  flake.nix  setup.py  tests.py
.github/workflows/: docs.yml  ubuntu.yml
benchmarks/: CMakeLists.txt  bench.cpp
c_api/: CMakeLists.txt
c_api/include/: gds.h
c_api/src/: gds.cpp
cmake/: deps_fetcher.cmake
docs/: benchmarks.rst  c_api.rst  conf.py  cpp_cli.rst  development.rst  index.rst  introduction.rst  python.rst  requirements.txt  theory.rst
genome_downsampler/: __init__.py  _gdsmodule.c  config.py
libs/: CMakeLists.txt
libs/bam-api/: CMakeLists.txt
libs/bam-api/src/: bam_api.cpp  bam_file_config_builder.cpp  bam_file_manager.cpp  region_api.cpp
libs/min-cost-flow-solver/: CMakeLists.txt
libs/min-cost-flow-solver/include/min-cost-flow-solver/: common.hpp  height_queue.hpp  push_relabel.hpp  push_relabel_openmp.hpp  push_relabel_optim_simple_heuristics.hpp  push_relabel_simple_heuristics.hpp  push_relabel_vector_simple_heuristics.hpp
libs/min-cost-flow-solver/src/: push_relabel.cpp  push_relabel_openmp.cpp  push_relabel_simple_heuristics.cpp  push_relabel_vector_simple_heuristics.cpp
libs/qmcp-solver/: CMakeLists.txt
libs/qmcp-solver/src/: mcp_cpu_cost_scaling_solver.cpp  qmcp_cpu_cost_scaling_solver.cpp  quasi_mcp_cpu_max_flow_solver.cpp  quasi_mcp_cpu_own_max_flow_solver.cpp  quasi_mcp_cuda_max_flow_solver.cu  test_solver.cpp
src/: CMakeLists.txt  app.cpp  app.hpp  solver_manager.hpp
src/tests/: coverage_tester.cpp
tests/fixtures/: sample.bam  sample.bam.bai
(+13 files in other folders)
